podReplica.yaml
apiVersion: v1
kind: Service
metadata:
  name: replica-service
spec:
  selector:
    app: echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
