podIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: echo.wik.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: replica-service
            port:
              number: 80
